Fixed layout issues

--- a/app/styles/preview.scss
+++ b/app/styles/preview.scss
@@ -80,16 +80,6 @@
   }
 }
 
-#selectedArrow {
-  width: 0px;
-  height: 0px;
-  border-top: 28px solid transparent;
-  border-bottom: 29px solid transparent;
-  border-left: 15px solid #FFF;
-  float: left;
-  position: relative;
-}
-
 #skin {
   width: 696px;
   float: left;
